task: added navbar to index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/computer-1591018_1920-2.jpg"class="d-block w-100"
+                    <img src="images/undraw_Designer_mindset_re_2w1k.svg"class="d-block w-100"
                          height="700"
                          alt="...">
                     <div class="carousel-caption d-none d-md-block">
