task: added f-layout, text, and images to project.html

--- a/index.html
+++ b/index.html
@@ -11,112 +11,136 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"
-</head>
 
-<header>
-    <header style="background-color: slategray">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <header>
+        <header style="background-color: ">
+            <nav class="navbar navbar-expand-lg navbar-light bg-black">
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <!-- Just an image -->
-                <nav class="navbar navbar-dark bg-black">
-                    <a class="navbar-brand" href="#">
-                        <i class="fas fa-lock"></i>
-                    </a>
-                </nav>
-                <a class="navbar-brand" href="#">Internet Privacy</a>
-                <div class="mr-auto"></div>
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Privacy
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <!-- Just an image -->
+                    <nav class="navbar navbar-dark bg-black">
+                        <a class="navbar-brand" href="#">
+                            <i class="fas fa-lock"></i>
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="page1.html">Surveillance, and Being tracked by the Government</a>
-                            <a class="dropdown-item" href="page2.html">Tracking and Security</a>
-                            <a class="dropdown-item" href="page3.html">Legal Aspects of Online Privacy</a>
-                            <a class="dropdown-item" href="page4.html">Basic Security</a>
-                            <a class="dropdown-item" href="page5.html">Advanced Security</a>
-                            <a class="dropdown-item" href="page6.html">Snowden Timeline</a>
-                            <a class="dropdown-item" href="page7.html">Surveillance Capitalism</a>
-                        </div>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="team.html">About Page</a>
-                    </li>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/undraw_Designer_mindset_re_2w1k.svg"class="d-block w-100"
-                         height="700"
-                         alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h4> Have you questioned your online safety?</h4>
-                        <h5>Learn about how your privacy may be compromised online.</h5>
-                        <a href="page2.html" class="btn btn-light" role="button"><b>Learn More</b></a>
-
-                    </div>
+                    </nav>
+                    <a class="navbar-brand" href="#">Portfolio</a>
+                    <div class="mr-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Projects
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="page1.html">Surveillance, the Government</a>
+                                <a class="dropdown-item" href="page2.html">Tracking and Security</a>
+                            </div>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="project.html">About Page</a>
+                        </li>
+                        </li>
+                    </ul>
                 </div>
+            </nav>
 
-                <div class="carousel-item">
-                    <img src="images/onlinesaftey.jpg" class="d-block w-100"
-                         height="700"
-                         alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h4>Protect Yourself</h4>
-                        <h5>Learn what you can do TODAY to minimize online security risks.</>
-                        <br><a href="page4.html" class="btn btn-light" role="button"><b>Learn More</b></a>
-                    </div>
-                </div>
+            <header>
 
-                <div class="carousel-item">
-                    <img src="images/black-and-white-1031685_1920.jpg" class="d-block w-100"
-                         height="700"
-                         alt="image of Edward Snowden">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h4>Snowden</h4>
-                        <h5>The whistleblower who exposed risks to American's privacy.</h5>
-                        <a href="page1.html" class="btn btn-dark" role="button"><b>Learn More</b></a>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+
+            </header>
+
+    <body style="background-color: lightgray">
+
+
+<img src="images/undraw_Designer_mindset_re_2w1k.svg">
+<h1><b>Purpose,
+    <br>Design &
+    <br>Ingenuity.</b>
+    <br>Explore Grace Burke's Resume
+    <br>
+</h1>
+
+</body>
+</div>
+
+
+<div class="card-deck">
+    <div class="card">
+        <img src="images/projects.svg" class="card-img-top" align="center" alt="...">
+        <div class="card-body">
+            <h2 class="card-title">About</h2>
+            <p class="card-text">Learn more about Grace and her professional goals.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
-    </header>
+    </div>
+    <div class="card">
+        <img src="images/undraw_personal_goals_edgd.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h2 class="card-title">Projects</h2>
+            <p class="card-text">See Grace's skills firsthand.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
-    <body>
-    <body style="background-color: slategray">
-    </body>
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/undraw_Social_media_re_w12q.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h2 class="card-title">Get Social</h2>
+            <p class="card-text">Check out Grace's Social Networking profiles.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<style>
+    body {
+        background-color: white;
+        padding: 30px;
+        font-family: "Roboto Light", sans-serif;
+    }
+
+    img{
+        height:650px;
+        padding-left: 100px;
+        vertical-align: -305px;
+    }
+
+    h1{
+        display: inline-block;
+        padding-top: 100px;
+        padding-left: 50px;
+        font-family: Serif;
+        font-size: 45px;
+
+    }
+
+
+
+</style>
+
+
+
     <footer>
 
-        <p style ="text-align:center"> Grace Burke and Carolina Villa &#169  2020</p>
+        <p style ="text-align:center"> Grace Burke &#169  2020 GIT LinkedIN</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+
+
+
 
 
