--- a/project.html
+++ b/project.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 </head>
 <header>
     <header style="background-color: ">
@@ -28,7 +29,7 @@
                             <i class="fas fa-lock"></i>
                         </a>
                     </nav>
-                    <a class="navbar-brand" href="#">Portfolio</a>
+                    <a class="navbar-brand" href="#">Portfolio <span class="sr-only">(current)</span></a>
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
@@ -43,7 +44,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="project.html">About Page<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="project.html">About Page</a>
                         </li>
                         </li>
                     </ul>
