--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -13,7 +14,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"
-
     <header>
         <header style="background-color: ">
             <nav class="navbar navbar-expand-lg navbar-light bg-black">
@@ -63,6 +63,9 @@
     <br>Design &
     <br>Ingenuity.</b>
     <br>Explore Grace Burke's Resume
+    <p align="left">
+        <a href="Resume.pdf" class="btn btn-light" role="button">Resume</a>
+    </p>
     <br>
 </h1>
 
@@ -76,7 +79,9 @@
         <div class="card-body">
             <h2 class="card-title">About</h2>
             <p class="card-text">Learn more about Grace and her professional goals.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p align="left">
+                <a href="about.html" class="btn btn-secondary" role="button">About</a>
+            </p>
         </div>
     </div>
     <div class="card">
@@ -84,7 +89,9 @@
         <div class="card-body">
             <h2 class="card-title">Projects</h2>
             <p class="card-text">See Grace's skills firsthand.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p align="left">
+                <a href="project.html" class="btn btn-secondary" role="button">Projects</a>
+            </p>
 
         </div>
     </div>
@@ -93,7 +100,12 @@
         <div class="card-body">
             <h2 class="card-title">Get Social</h2>
             <p class="card-text">Check out Grace's Social Networking profiles.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p align="left">
+                <a href="https://www.linkedin.com/in/grace-b-084724200" class="btn btn-secondary" role="button">LinkedIn</a>
+                <a href="https://www.facebook.com/grace.burke.3939" class="btn btn-light" role="button">Facebook</a>
+                <a href="https://www.instagram.com/gracenoelb/" class="btn btn-secondary" role="button">Instagram</a>
+            </p>
+
         </div>
     </div>
 </div>
@@ -113,7 +125,7 @@
     img{
         height:650px;
         padding-left: 100px;
-        vertical-align: -305px;
+        vertical-align: -200px;
     }
 
     h1{
