--- a/about.html
+++ b/about.html
@@ -32,25 +32,20 @@
                 <a class="navbar-brand" href="#">Portfolio <span class="sr-only">(current)</span></a>
                 <div class="mr-auto"></div>
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Projects
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="page1.html">Surveillance, the Government</a>
-                            <a class="dropdown-item" href="page2.html">Tracking and Security</a>
-                        </div>
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="project.html">About Page</a>
-                    </li>
-                    </li>
-                </ul>
+                            <a class="nav-link" href="about.html">About Page<span class="sr-only">(current)</span></a>
+                        </li>
+                        <a class="nav-link" href="project.html">Projects</a>
+                        </li>
+                        </li>
+                    </ul>
             </div>
         </nav>
     </header>
+
 
     <div class="container">
         <style>
@@ -62,14 +57,16 @@
         <body style="background-color: lightgray">
 
         <div class="jumbotron bg-light text-dar">
-            <h1 class="display-4">Projects</h1>
-            <h2 style="color: black"> Grace's skills in web design </h2>
+            <h1 class="display-4">Grace's Professional Interests and Goals</h1>
             <p class="lead"</p>
             <hr class="my-4">
             <p>
-                Grace is a freshman in Professor Kieth William's IS117 Course. This semester she has learned about developing websites and key technology areas, such as internet privacy.</p>
-        </div>
+                To slearn more about her skills; explore Grace's GitHub:</p>
+            <a href="https://github.com/GraceBurke-88">
+                <img alt="Qries" src="images/GitHub-Mark-120px-plus.png">
+            </a>
 
+        </div>
 
 
         <div class="card mb-3 bg-light text-dark"  style="min-width: 1200px; min-height: 300px" >
@@ -82,7 +79,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="card-body">
-                        <h4 class="card-title">Data Privacy/Partner Project</h4>
+                        <h4 class="card-title">Professional Interests</h4>
                         <p class="card-text"> In the project, Grace utilized her web design skills to collaborate on a group project. She exercise skills of project management, remote teamwork, and practiced key skills such as merging her project into a shared Github.
                         </p>
                     </div>
@@ -104,7 +101,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="card-body">
-                        <h4 class="card-title">History of the Internet</h4>
+                        <h4 class="card-title">Goals</h4>
                         <p class="card-text"> In the project, Grace utilized her web sklls to collaborate on a group project. She exercise skills of project management, remote teamwork, and practiced key skills such as merging her project into a shared Github.
                         </p>
                     </div>
