--- a/index.html
+++ b/index.html
@@ -31,19 +31,13 @@
                     <a class="navbar-brand" href="#">Portfolio</a>
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Projects
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="page1.html">Surveillance, the Government</a>
-                                <a class="dropdown-item" href="page2.html">Tracking and Security</a>
-                            </div>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="project.html">About Page</a>
+                            <a class="nav-link" href="about.html">About Page</a>
+                        </li>
+                            <a class="nav-link" href="project.html">Projects</a>
                         </li>
                         </li>
                     </ul>
