task: added content to about/projects

--- a/about.html
+++ b/about.html
@@ -57,11 +57,11 @@
         <body style="background-color: lightgray">
 
         <div class="jumbotron bg-light text-dar">
-            <h1 class="display-4">Grace's Professional Interests and Goals</h1>
+            <h1 class="display-4"; style="color: #333152">Grace's Professional Interests and Goals</h1>
             <p class="lead"</p>
             <hr class="my-4">
             <p>
-                To slearn more about her skills; explore Grace's GitHub:</p>
+                To learn more about her skills; explore Grace's GitHub:</p>
             <a href="https://github.com/GraceBurke-88">
                 <img alt="Qries" src="images/GitHub-Mark-120px-plus.png">
             </a>
@@ -72,7 +72,7 @@
         <div class="card mb-3 bg-light text-dark"  style="min-width: 1200px; min-height: 300px" >
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="images/undraw_collaborators_prrw.svg" class="card-img"
+                    <img src="images/undraw_Data_re_80ws.svg" class="card-img"
                          alt="...">
 
 
@@ -80,7 +80,11 @@
                 <div class="col-md-5">
                     <div class="card-body">
                         <h4 class="card-title">Professional Interests</h4>
-                        <p class="card-text"> In the project, Grace utilized her web design skills to collaborate on a group project. She exercise skills of project management, remote teamwork, and practiced key skills such as merging her project into a shared Github.
+                        <p class="card-text">Grace's professional intrests include:
+                            working in web design or aspects of web development;
+                            working in data management, specifically in business; and
+                            working with knowledge of human-computer interactions to optimize web design.
+
                         </p>
                     </div>
                     <p align="left">
@@ -94,7 +98,7 @@
         <div class="card mb-3 bg-light text-dark"  style="min-width: 1200px; min-height: 300px" >
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="images/undraw_data_processing_yrrv.svg" class="card-img"
+                    <img src="images/undraw_personal_goals_edgd.svg" class="card-img"
                          alt="...">
 
 
@@ -102,7 +106,10 @@
                 <div class="col-md-5">
                     <div class="card-body">
                         <h4 class="card-title">Goals</h4>
-                        <p class="card-text"> In the project, Grace utilized her web sklls to collaborate on a group project. She exercise skills of project management, remote teamwork, and practiced key skills such as merging her project into a shared Github.
+                        <p class="card-text"> Grace plan to work in a web field and to specialize in data management. She hopes to work in a job that combines collaboration and problem solving.
+                            Before this, she hopes to finish her degree in Web and Information Systems at the New Jersey Institute of Technology and to get involved in
+                            research, study abroad, and internships to broaden her knowledge and experience.
+
                         </p>
                     </div>
                     <p align="left">
@@ -120,7 +127,9 @@
         </body>
         <footer>
 
-            <p style ="text-align:center"> Grace Burke and Carolina Villa &#169  2020</p>
+            <p style ="text-align:center"> Grace Burke <a href="https://www.linkedin.com/in/grace-b-084724200" class="link" >LinkedIn</a>
+                <a href="https://github.com/GraceBurke-88" class="link" >GitHub</a>&#169  2020</p>
+
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
