--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
 
     <footer>
 
-        <p style ="text-align:center"> Grace Burke &#169  2020 GIT LinkedIN</p>
+        <p style ="text-align:center"> Grace Burke <a href="https://www.linkedin.com/in/grace-b-084724200" class="link" >LinkedIn</a>
+            <a href="https://github.com/GraceBurke-88" class="link" >GitHub</a>&#169  2020</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
