--- a/project.html
+++ b/project.html
@@ -61,7 +61,9 @@
             <p class="lead"</p>
             <hr class="my-4">
             <p>
-                Grace is a freshman in Professor Kieth William's IS117 Course. This semester she has learned about developing websites and key technology areas, such as internet privacy.</p>
+                Grace is a freshman in Professor Kieth William's IS117 Course. This semester she has learned about developing websites and key technology areas, such as internet privacy.
+                <b>See the tables below to explore the
+                    projects that Grace created and collaborated on this semester.</b></p>
         </div>
 
 
@@ -69,7 +71,7 @@
             <div class="card mb-3 bg-light text-dark"  style="min-width: 1200px; min-height: 300px" >
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="images/undraw_collaborators_prrw.svg" class="card-img"
+                        <img src="images/undraw_accept_terms_4in8.svg" class="card-img"
                              alt="...">
 
 
@@ -78,6 +80,8 @@
                         <div class="card-body">
                             <h4 class="card-title">Data Privacy/Partner Project</h4>
                             <p class="card-text"> In the project, Grace utilized her web design skills to collaborate on a group project. She exercise skills of project management, remote teamwork, and practiced key skills such as merging her project into a shared Github.
+                                This project focused on data privacy. It explored some of the history and politics around online privacy, such as the story of Edward Snowden.
+                                It also explains ways for users to improve their online privacy.
                             </p>
                         </div>
                         <p align="left">
@@ -98,26 +102,48 @@
                         </div>
                         <div class="col-md-5">
                             <div class="card-body">
-                                <h4 class="card-title">History of the Internet</h4>
+                                <h4 class="card-title">Cloud Technology</h4>
                                 <p class="card-text"> In the project, Grace utilized her web sklls to collaborate on a group project. She exercise skills of project management, remote teamwork, and practiced key skills such as merging her project into a shared Github.
                                 </p>
                             </div>
                             <p align="left">
-                                <a href="https://www.linkedin.com/in/grace-b-084724200" class="btn btn-secondary" role="button">LinkedIn</a>
+                                <a href="https://graceburke-88.github.io/History-and-How-the-Internet-Works-/" class="btn btn-secondary" role="button">History and How the Internet Works</a>
                             </p>
                         </div>
                     </div>
                 </div>
 
 
+        <div class="card mb-3 bg-light text-dark"  style="min-width: 1200px; min-height: 300px" >
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="images/undraw_data_processing_yrrv.svg" class="card-img"
+                         alt="...">
 
+
+                </div>
+                <div class="col-md-5">
+                    <div class="card-body">
+                        <h4 class="card-title">History of the Internet/ How the Internet Works</h4>
+                        <p class="card-text"> This project explores several facets of the internet.
+                            It explores key aspects of the Internet's colorful history, such as the 'browser wars' that took place between the internet giants.
+                            It also explores how the internet works, and breaks down the basics behind the architecture of the web.
+                        </p>
+                    </div>
+                    <p align="left">
+                        <a href="https://graceburke-88.github.io/History-and-How-the-Internet-Works-/" class="btn btn-secondary" role="button">History and How the Internet Works</a>
+                    </p>
+                </div>
+            </div>
+        </div>
 
 
 
         </body>
         <footer>
 
-            <p style ="text-align:center"> Grace Burke and Carolina Villa &#169  2020</p>
+            <p style ="text-align:center"> Grace Burke <a href="https://www.linkedin.com/in/grace-b-084724200" class="link" >LinkedIn</a>
+                <a href="https://github.com/GraceBurke-88" class="link" >GitHub</a>&#169  2020</p>
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
