--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <header>
+    <div class="container">
     <header style="background-color: ">
         <nav class="navbar navbar-expand-lg navbar-light bg-black">
 
@@ -44,6 +45,7 @@
                     </ul>
             </div>
         </nav>
+
     </header>
 
 
@@ -55,6 +57,13 @@
         </style>
         <body>
         <body style="background-color: lightgray">
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> About</li>
+            </ol>
+        </nav>
 
         <div class="jumbotron bg-light text-dar">
             <h1 class="display-4"; style="color: #333152">Grace's Professional Interests and Goals</h1>
@@ -112,9 +121,6 @@
 
                         </p>
                     </div>
-                    <p align="left">
-                        <a href="https://www.linkedin.com/in/grace-b-084724200" class="btn btn-secondary" role="button">LinkedIn</a>
-                    </p>
                 </div>
             </div>
         </div>
