--- a/project.html
+++ b/project.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <header>
+    <div class="container">
     <header style="background-color: ">
             <nav class="navbar navbar-expand-lg navbar-light bg-black">
 
@@ -44,9 +45,14 @@
                     </ul>
                 </div>
             </nav>
+
         </header>
 
     <div class="container">
+
+
+
+
         <style>
             * {
                 font-family: serif;
@@ -54,6 +60,14 @@
         </style>
         <body>
         <body style="background-color: lightgray">
+
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> Projects</li>
+            </ol>
+        </nav>
 
         <div class="jumbotron bg-light text-dar">
             <h1 class="display-4">Projects</h1>
@@ -85,7 +99,7 @@
                             </p>
                         </div>
                         <p align="left">
-                            <a href="https://www.linkedin.com/in/grace-b-084724200" class="btn btn-secondary" role="button">LinkedIn</a>
+                            <a href="https://graceburke-88.github.io/internetPrivacy/index.html" class="btn btn-secondary" role="button">Privacy Website</a>
                         </p>
                     </div>
                 </div>
@@ -95,7 +109,7 @@
                 <div class="card mb-3 bg-light text-dark"  style="min-width: 1200px; min-height: 300px" >
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="images/undraw_data_processing_yrrv.svg" class="card-img"
+                            <img src="images/undraw_Cloud_docs_re_xjht.svg" class="card-img"
                                  alt="...">
 
 
@@ -107,7 +121,7 @@
                                 </p>
                             </div>
                             <p align="left">
-                                <a href="https://graceburke-88.github.io/History-and-How-the-Internet-Works-/" class="btn btn-secondary" role="button">History and How the Internet Works</a>
+                                <a href="https://graceburke-88.github.io/CloudTechnology/" class="btn btn-secondary" role="button">Cloud Technology</a>
                             </p>
                         </div>
                     </div>
