--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <body style="background-color: lightgray">
 
 
-<img src="images/undraw_Designer_mindset_re_2w1k.svg">
+<img src="images/undraw_Designer_mindset_re_2w1k.svg"; style="height: 500px">
 <h1><b>Purpose,
     <br>Design &
     <br>Ingenuity.</b>
@@ -104,36 +104,6 @@
     </div>
 </div>
 
-
-
-
-
-
-<style>
-    body {
-        background-color: white;
-        padding: 30px;
-        font-family: "Roboto Light", sans-serif;
-    }
-
-    img{
-        height:650px;
-        padding-left: 100px;
-        vertical-align: -200px;
-    }
-
-    h1{
-        display: inline-block;
-        padding-top: 100px;
-        padding-left: 50px;
-        font-family: Serif;
-        font-size: 45px;
-
-    }
-
-
-
-</style>
 
 
 
