bug: fixed image on about page

--- a/about.html
+++ b/about.html
@@ -70,10 +70,8 @@
             <p class="lead"</p>
             <hr class="my-4">
             <p>
-                To learn more about her skills; explore Grace's GitHub:</p>
-            <a href="https://github.com/GraceBurke-88">
-                <img alt="Qries" src="images/GitHub-Mark-120px-plus.png">
-            </a>
+                To learn more about her skills; explore:</p>
+            <a href="https://github.com/GraceBurke-88" class="link" >Grace's GitHub</a>
 
         </div>
 
