--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     <body style="background-color: lightgray">
 
 
-<img src="images/undraw_Designer_mindset_re_2w1k.svg"; style="height: 550px">
+<img src="images/undraw_Designer_mindset_re_2w1k.svg";
+     style="height: 550px;
+     padding-left: 150px;
+     vertical-align: -125px;">
 <h1><b>Purpose,
     <br>Design &
     <br>Ingenuity.</b>
@@ -103,7 +106,6 @@
         </div>
     </div>
 </div>
-
 
 
 
