bug: cards on homepage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ></html>
 <head>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <meta charset="UTF-8">
@@ -13,9 +13,9 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css"
-    <header>
-        <header style="background-color: ">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<header>
             <nav class="navbar navbar-expand-lg navbar-light bg-black">
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,24 +38,19 @@
                             <a class="nav-link" href="about.html">About Page</a>
                         </li>
                             <a class="nav-link" href="project.html">Projects</a>
-                        </li>
-                        </li>
                     </ul>
                 </div>
             </nav>
 
-            <header>
-
-
-            </header>
-
+</header>
     <body style="background-color: lightgray">
 
 
-<img src="images/undraw_Designer_mindset_re_2w1k.svg";
+<img src="images/undraw_Designer_mindset_re_2w1k.svg"
      style="height: 550px;
      padding-left: 150px;
-     vertical-align: -125px;">
+     vertical-align: -125px;"
+      alt="...">
 <h1><b>Purpose,
     <br>Design &
     <br>Ingenuity.</b>
