--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css" >
 </head>
 <header>
     <div class="container">
@@ -50,11 +50,6 @@
 
 
     <div class="container">
-        <style>
-            * {
-                font-family: serif;
-            }
-        </style>
         <body>
         <body style="background-color: lightgray">
 
@@ -67,7 +62,7 @@
 
         <div class="jumbotron bg-light text-dar">
             <h2 class="display-4"; style="color: #333152">Grace's Professional Interests and Goals</h2>
-            <p class="lead"</p>
+            <p class="lead"> </p>
             <hr class="my-4">
             <p>
                 To learn more about her skills; explore:</p>
@@ -80,6 +75,7 @@
             <div class="row no-gutters">
                 <div class="col-md-4">
                     <img src="images/undraw_Data_re_80ws.svg" class="card-img"
+                    padding-top="100"
                          alt="...">
 
 
