bug: fixed gitHub link

--- a/about.html
+++ b/about.html
@@ -65,9 +65,9 @@
             <p class="lead"> </p>
             <hr class="my-4">
             <p>
-                To learn more about her skills; explore:</p>
-            <a href="https://github.com/GraceBurke-88" class="link" >Grace's GitHub</a>
-
+                To learn more about her skills; explore:
+                <a href="https://github.com/GraceBurke-88" class="link" >Grace's GitHub</a>
+            </p>
         </div>
 
 
